<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"

            android:layout_marginTop="45dp"
            android:letterSpacing="0.05"
            android:text="@string/topClockStr"
            android:textColor="#ABABAB"
            android:textSize="20sp" />
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="22dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/timeStr"
                    android:textColor="@color/topClockText"
                    android:textSize="20dp"
                    android:textStyle="bold"></TextView>
            <TextView
                    android:id="@+id/top_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="15:00"
                    android:onClick="showTimePickerDialog"
                    android:textSize="20dp"
                    android:layout_marginRight="50dp"
                    ></TextView>
        </LinearLayout>
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="22dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/incrementStr"
                    android:textColor="@color/topClockText"
                    android:textSize="20dp"
                    android:textStyle="bold"></TextView>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="00:05"
                    android:textSize="20dp"
                    android:layout_marginRight="50dp"
                    ></TextView>
        </LinearLayout>
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"

            android:layout_marginTop="45dp"
            android:letterSpacing="0.05"
            android:text="@string/bottomClockStr"
            android:textColor="#ABABAB"
            android:textSize="20sp" />
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="22dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/timeStr"
                    android:textColor="@color/topClockText"
                    android:textSize="20dp"
                    android:textStyle="bold"></TextView>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="15:00"
                    android:textSize="20dp"
                    android:layout_marginRight="50dp"
                    ></TextView>
        </LinearLayout>
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="22dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/incrementStr"
                    android:textColor="@color/topClockText"
                    android:textSize="20dp"
                    android:textStyle="bold"></TextView>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="00:05"
                    android:textSize="20dp"
                    android:layout_marginRight="50dp"
                    ></TextView>
        </LinearLayout>
        <TableRow
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ABABAB"></TableRow>

    </LinearLayout>

    <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorActive"
            android:text="@string/startStr"
            android:textColor="@android:color/white"
            android:textSize="24dp">

    </Button>
</FrameLayout>
